--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
 	<title>WebGL Test</title>
 </head>
 <body>
+	<script id="vs" type="x-shader/x-vertex">
+		attribute vec3 position;
+		uniform mat4 mvpMatrix;
+		void main(void){
+			gl_Position = mvpMatrix * vec4(position, 1.0);
+		}
+	</script>
+	<script id="fs" type="x-shader/x-fragment">
+		void main(void){
+			gl_FragColor = vec4(1.0, 1.0, 1.0, 1.0);
+		}
+	</script>
+	<script src="node_modules/google-closure-library/closure/goog/base.js"></script>
 	<script src="scripts/main.js"></script>
 </body>
 </html>
