draw triangle polygon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>WebGL Test</title>
 </head>
 <body>
+	<script src="scripts/minMatrix.js"></script>
 	<script id="vs" type="x-shader/x-vertex">
 		attribute vec3 position;
 		uniform mat4 mvpMatrix;
